Update docs around GraphOS plans

--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -3,7 +3,9 @@ title: Contracts
 description: Deliver subsets of your enterprise supergraph
 ---
 
-> Contracts are available only for [Enterprise plans](https://www.apollographql.com/pricing/).
+> **This feature is available only with an [Enterprise plan](https://www.apollographql.com/pricing/).**
+>
+> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](../org/plans/#enterprise-trials).
 
 GraphOS **contracts** enable you to deliver different subsets of your supergraph to different consumers. Each contract filters specific portions of your supergraph's schema into a different GraphOS variant:
 
