--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -3,11 +3,32 @@ title: GraphOS Enterprise features
 description: Overview
 ---
 
-With an Apollo GraphOS Enterprise plan, you gain access to powerful routing, delivery, and governance features for your supergraph. This article summarizes the most notable of these features and provides links to the full documentation for each.
+**With an Apollo GraphOS Enterprise plan,** you gain access to powerful routing, delivery, and governance features for your supergraph. This article summarizes the most notable of these features and provides links to the full documentation for each.
 
 See the left navigation for a list of all Enterprise-specific articles from across the GraphOS documentation.
 
 > To compare GraphOS feature support across all plan types, see our [pricing page](https://www.apollographql.com/pricing/).
+
+## Enterprise trial
+
+You can sign up for a GraphOS Enterprise trial to freely test out _most_ Enterprise features for the duration of the trial period.
+
+<p>
+  <ButtonLink
+    size="lg"
+    colorScheme="indigo"
+    href="https://studio.apollographql.com/signup?type=enterprise-trial"
+    style={{
+      marginRight: '10px'
+    }}
+  >
+    Start an Enterprise trial
+  </ButtonLink>
+  <ButtonLink href="../org/plans/#enterprise-trials" size="lg">
+    See details
+  </ButtonLink>
+</p>
+
 
 ## Self-hosted routing
 
@@ -30,7 +51,7 @@ These router instances connect to GraphOS to fetch their managed configuration a
 
 This architecture helps you satisfy sophisticated requirements around data compliance and performance, and it also enables you to further customize your router's behavior with Enterprise-specific functionality (described [below](#apollo-router-features)).
 
-> [Learn more about self-hosted routing.](../routing/self-hosted/)
+> [Create a self-hosted supergraph.](../quickstart/self-hosted/)
 
 ### Apollo Router features
 
