--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -46,12 +46,12 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 ### Core features
 
-These features (along with many others) are available to organizations on the **Serverless (Free)** or **Serverless** plan:
+These features (along with many others) are available to organizations on an Apollo **Serverless** plan:
 
-> [Learn about Apollo plans.](https://www.apollographql.com/pricing/)
+> [See all Apollo plans.](https://www.apollographql.com/pricing/)
 
 - [**Cloud routing.**](./routing/cloud/)
-  - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in Apollo Studio](./metrics/).
+  - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in GraphOS Studio](./metrics/).
 - **The schema registry.**
   - GraphOS tracks the GraphQL schemas for all of your individual subgraphs, and it also handles **composing** those subgraph schemas into one _supergraph_ schema for your router.
 - **Safe schema delivery.**
@@ -59,28 +59,31 @@ These features (along with many others) are available to organizations on the **
   - Whenever you update a subgraph schema, GraphOS composes a new _supergraph_ schema for your router. If composition succeeds, your router automatically begins using its new schema.
   - You can view the results of each [launch](./delivery/launches/) that takes place whenever you update a subgraph schema, helping you resolve any issues that might occur.
 - **An interface for every use case.**
-  - [Apollo Studio](https://studio.apollographql.com?referrer=docs-content) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](./graphs/studio-features/#the-schema-page) and [metrics](./metrics/), and test out operations in [the Explorer](./explorer/).
+  - [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](./graphs/studio-features/#the-schema-page) and [metrics](./metrics/), and test out operations in [the Explorer](./explorer/).
   - [The Rover CLI](/rover/getting-started/) is the primary _command-line_ interface for GraphOS. Among other capabilities, you use Rover to publish subgraph schemas to the registry, run schema checks from CI, and test out your supergraph within your development environment.
   - If you want to automate your own workflows outside of Studio or Rover, you can use the official [GraphOS Platform API](./platform-api) to do so. We'll expose more GraphOS capabilities through the Platform API over time.
 
 ### Enterprise features
 
-These additional features are available to organizations on an **Enterprise** plan:
+> Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials)!
+
+Additional GraphOS features are available to organizations on an **Enterprise** plan:
 
 - [**Self-hosted routing.**](./routing/self-hosted/)
   - Deploy GraphOS-managed routers inside your own infrastructure, enabling you to maximize performance and fully customize their behavior. Self-hosted routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
+  - Enable [advanced features](/router/enterprise-features/) for your router fleet, such as operation limits and Redis-backed distributed caching.
 - **Supergraph filtering with [contracts](./delivery/contracts/).**
-  - Deploy multiple instances of your router that use different filtered subsets of your supergraph's schema. Different clients can then communicate with different routers, limiting them to whichever types and fields they should have access to.
-- **Extended data retention.**
-  - Your supergraph's historical operation metrics are available for visualization in Studio significantly longer than with a **Serverless** plan.
+  - Deploy multiple instances of your router that each use a different filtered subset of your supergraph's schema. Different clients can then communicate with different routers, limiting them to whichever parts of your supergraph they should have access to.
 - **Enhanced user management.**
   - Assign fine-grained [user roles](./org/members/) to organization members, and optionally override those roles on a graph-by-graph basis.
   - Set up single sign-on (SSO) with your identity provider.
   - Export [audit logs](./org/audit-log/) of all material events that occurred within your organization over a time period.
+- **Extended data retention.**
+  - Your supergraph's historical operation metrics are available for visualization in Studio significantly longer than with a **Serverless** plan.
 
-In addition to the features above, an Enterprise plan provides access to our Graph Champions community and a dedicated support channel for your team to talk with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
+An Enterprise plan also provides access to our Graph Champions community and a dedicated support channel for your team to connect with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
 
-**If you're interested in an Enterprise plan,** please [get in touch with us!](https://www.apollographql.com/contact-sales/)
+**If you're interested in Enterprise features,** please [get in touch with us!](https://www.apollographql.com/contact-sales/) You can also test out these features with a free [Enterprise trial](./org/plans/#enterprise-trials).
 
 ---
 
