--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -3,13 +3,11 @@ title: Setting up a self-hosted supergraph
 description: Host your enterprise router in your own infrastructure
 ---
 
-> ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](./cloud/).
+> **Self-hosted supergraphs are an Enterprise feature** for organizations with advanced performance or compliance requirements.
 >
-> Self-hosted supergraphs are an enterprise-only feature for organizations with advanced performance or compliance requirements.
->
-> If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
+> If your organization might benefit from [Enterprise features](../enterprise/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
-This tutorial helps you get you up and running with GraphOS and a self-hosted supergraph. You can complete this tutorial even if your organization _doesn't_ currently have an Enterprise plan, enabling you to test out this functionality.
+This tutorial gets you up and running with GraphOS and a self-hosted supergraph. If your organization _doesn't_ currently have an Enterprise plan and you want to test out this functionality, **[sign up for a free Enterprise trial.](../org/plans/#enterprise-trials)**
 
 > **Important:** This tutorial uses **Docker** for containerization of your supergraph's router.
 
@@ -46,8 +44,8 @@ We'll cover these concepts in more detail as we proceed through the steps below.
 
 This quickstart uses the following Apollo tools:
 
-* **GraphOS Studio.** This is the primary web interface for GraphOS. Studio helps you monitor, manage, and collaborate on your supergraph.
-* **The Rover CLI.** This is the primary _command-line_ interface for GraphOS. Rover helps you interact with your graphs and their schemas.
+- **GraphOS Studio.** This is the primary web interface for GraphOS. Studio helps you monitor, manage, and collaborate on your supergraph.
+- **The Rover CLI.** This is the primary _command-line_ interface for GraphOS. Rover helps you interact with your graphs and their schemas.
 
 Let's set these up first.
 
