--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -5,7 +5,7 @@ description: Host your supergraph's router in your own infrastructure
 
 > ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
 >
-> Self-hosted supergraphs are an enterprise-only feature for organizations with advanced performance or compliance requirements.
+> Self-hosted supergraphs are an Enterprise feature for organizations with advanced performance or compliance requirements.
 >
 > If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
@@ -34,7 +34,7 @@ With the exception of Apollo-managed routing, self-hosted supergraphs benefit fr
 
 ## Creating a self-hosted supergraph
 
-Organizations with any Apollo plan type can create self-hosted supergraphs to test out this functionality before moving to an Enterprise plan.
+> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](../org/plans/#enterprise-trials).
 
 See the instructions for your organization's [plan type](../org/plans/):
 
