Add referrer link

--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -43,7 +43,7 @@ You can sign up for a GraphOS Enterprise trial to freely test out _most_ [GraphO
   <ButtonLink
     size="lg"
     colorScheme="indigo"
-    href="https://studio.apollographql.com/signup?type=enterprise-trial"
+    href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
   >
     Start an Enterprise trial
   </ButtonLink>
