--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -17,7 +17,7 @@ You can sign up for a GraphOS Enterprise trial to freely test out _most_ Enterpr
   <ButtonLink
     size="lg"
     colorScheme="indigo"
-    href="https://studio.apollographql.com/signup?type=enterprise-trial"
+    href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
     style={{
       marginRight: '10px'
     }}
