Edits to schema linting content

--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -1,11 +1,13 @@
 ---
-title: Schema Linter
-description: Enforce schema design best practices in your graph.
+title: Schema linting
+description: With GraphOS
 ---
 
-GraphOS schema linter allows you to enforce consistency in schema design with automation that can check for formatting, styling and naming conventions that adhere to GraphQL and federation best practices.
+GraphOS provides a **schema linter** that can enforce recommended formatting conventions and other GraphQL best practices in every change to your graph's schema.
 
-## Configure Lint Checks in Studio
+Linting runs alongside your graph's other [schema checks](./schema-checks/), enabling you to integrate it seamlessly into your CI pipeline.
+
+## Studio setup
 
 To configure lint checks in Studio, navigate to the Linter tab from the Checks page.
 Under Default Linter Configuration you will see the default linter settings for variants of this graph. Enabling the linter will run the linter on all graph variants. Note that the linter will only run on modified parts of your schema and not the entire schema.
@@ -18,398 +20,8 @@ The severity level defaults to Error but you can use the toggle to configure to 
 
 To see the full list of lint rules please refer to the List of Lint Rules and Examples section below (TODO: link to section)
 
-## Lint with Rover
+## Linting with the Rover CLI
 
-## List of Lint Rules and Examples
+## Linter rules
 
-**Rule name:**
-`CONTACT_DIRECTIVE-MISSING`
-
-**Description:**
-Subgraph owner information is missing. Provide an owner for this subgraph using the @contact directive.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`DEPRECATED_DIRECTIVE_MISSING_REASON`
-
-**Description:**
-Missing reason for @deprecated. Add as @deprecated(reason: String)
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`DIRECTIVE_NAMES_SHOULD_BE_CAMEL_CASE`
-
-**Description:**
-Directive names need to follow camelCase style.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`DOES_NOT_PARSE`
-
-**Description:**
-Schema did not parse.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`ENUM_PREFIX`
-
-**Description:**
-Enum type names should not be prefixed with the word Enum.
-
-**Example:**
-
-```graphql
-# :x:
-enum EnumLocationType { # highlight-line
-    SPACESHIP
-    HOUSE
-    CAMPSITE
-}
-
-# :white_check_mark:
-enum LocationType { # highlight-line
-    SPACESHIP
-    HOUSE
-    CAMPSITE
-}
-```
-
-**Rule name:**
-`ENUM_SUFFIX`
-
-**Description:**
-Enum type names should not be suffixed with the word Enum.
-
-**Example:**
-
-```graphql
-# :x:
-enum LocationTypeEnum { # highlight-line
-    SPACESHIP
-    HOUSE
-    CAMPSITE
-}
-
-# :white_check_mark:
-enum LocationType { # highlight-line
-    SPACESHIP
-    HOUSE
-    CAMPSITE
-}
-```
-
-**Rule name:**
-`ENUM_USED_AS_INPUT_WITHOUT_SUFFIX`
-
-**Description:**
-Enum is used as an input argument. Suffix Enum type name with the word Input.
-
-**Example:**
-
-```graphql
-# :x:
-type Query {
-    directions(location: LocationType) # highlight-line
-}
-
-
-# :white_check_mark:
-type Query {
-    directions(location: LocationTypeInput) # highlight-line
-}
-```
-
-**Rule name:**
-`ENUM_USED_AS_OUTPUT_DESPITE_SUFFIX`
-
-**Description:**
-Enum is used as a return type for a non-input type field. Enum type name cannot be suffixed with the word Input.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`ENUM_VALUES_SHOULD_BE_SCREAMING_SNAKE_CASE`
-
-**Description:**
-Enum values need to follow SCREAMING_SNAKE_CASE style.
-
-**Example:**
-
-```graphql
-# :x:
-enum LocationType {
-    cool_spaceship # highlight-line
-}
-
-# :white_check_mark:
-enum LocationType {
-    COOL_SPACESHIP # highlight-line
-}
-```
-
-**Rule name:**
-`FIELD_NAMES_SHOULD_BE_CAMEL_CASE`
-
-**Description:**
-Field names need to follow camelCase style.
-
-**Example:**
-
-```graphql
-# :x:
-type Book {
-    PublishingCompany: String # highlight-line
-}
-
-# :white_check_mark:
-type Book {
-    publishingCompany: String # highlight-line
-}
-```
-
-**Rule name:**
-`INPUT_ARGUMENT_NAMES_SHOULD_BE_CAMEL_CASE`
-
-**Description:**
-Input argument names need to follow camelCase style.
-
-**Example:**
-
-```graphql
-# :x:
-type Mutation {
-    createBlogPost(BlogPostContent: BlogPostContent!): Post # highlight-line
-}
-
-# :white_check_mark:
-type Mutation {
-    createBlogPost(blogPostContent: BlogPostContent!): Post  # highlight-line
-}
-```
-
-**Rule name:**
-`INPUT_TYPE_SUFFIX`
-
-**Description:**
-Input type names should be suffixed with the word Input.
-
-**Example:**
-
-```graphql
-# :x:
-type Mutation {
-    createBlogPost(content: BlogPostContent!): Post # highlight-line
-}
-
-# :white_check_mark:
-type Mutation {
-    createBlogPost(content: BlogPostContenInput!): Post # highlight-line
-}
-```
-
-**Rule name:**
-`INTERFACE_PREFIX`
-
-**Description:**
-Interface type names should not be prefixed with the word Interface.
-
-**Example:**
-
-```graphql
-# :x:
-interface InterfaceBook { # highlight-line
-    title: String
-    author: String
-}
-
-# :white_check_mark:
-interface Book { # highlight-line
-    title: String
-    author: String
-}
-```
-
-**Rule name:**
-`INTERFACE_SUFFIX`
-
-**Description:**
-Interface type names should not be suffixed with the word Interface.
-
-**Example:**
-
-```graphql
-# :x:
-interface BookInterface { # highlight-line
-    title: String
-    author: String
-}
-
-# :white_check_mark:
-interface Book { # highlight-line
-    title: String
-    author: String
-}
-```
-
-**Rule name:**
-`OBJECT_PREFIX`
-
-**Description:**
-Object type names should not be prefixed with the word Object.
-
-**Example:**
-
-```graphql
-# :x:
-type ObjectAuthor { # highlight-line
-    name: String
-    books: [ObjectBook] # highlight-line
-}
-
-# :white_check_mark:
-type Author { # highlight-line
-    name: String
-    books: [Book] # highlight-line
-}
-```
-
-**Rule name:**
-`OBJECT_SUFFIX`
-
-**Description:**
-Object type names should not be suffixed with the word Object.
-
-**Example:**
-```graphql
-# :x:
-type AuthorObject { # highlight-line
-    name: String
-    books: [BookObject] # highlight-line
-}
-
-# :white_check_mark:
-type Author { # highlight-line
-    name: String
-    books: [Book] # highlight-line
-}
-```
-
-**Rule name:**
-`QUERY_DOCUMENTATION_DECLARATION`
-
-**Description:**
-Schema documents should not contain executable definitions.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`RESTY_FIELD_NAMES`
-
-**Description:**
-The Federation version used is not supported by contracts.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`TAG_DIRECTIVE_USES_UNKNOWN_NAME`
-
-**Description:**
-The @tag directive should use an approved value for its name argument.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`TYPE_NAMES_SHOULD_BE_PASCAL_CASE`
-
-**Description:**
-Type names should follow PascalCase style.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`TYPE_PREFIX`
-
-**Description:**
-Type names should not be prefixed with the word Type.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`TYPE_SUFFIX`
-
-**Description:**
-Type names should not be suffixed with the word Type.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`UNKNOWN`
-
-**Description:**
-Unknown error returned by linter.
-
-**Example:**
-
-```graphql
-
-```
-
-**Rule name:**
-`UNRECOGNIZED`
-
-**Description:**
-Unrecognized error returned by linter.
-
-**Example:**
-
-```graphql
-
-```
+See [this article](./linter-rules).
