--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -1,3 +1,534 @@
 ---
-title: Placeholder
+title: GraphOS schema linter rules
+description: Reference
 ---
+
+This reference describes the rules that you can enforce with [GraphOS schema linting](./schema-linter/), along with the code that GraphOS returns for each rule violation.
+
+Rules are categorized by the part(s) of your schema that they correspond to.
+
+## Schema
+
+#### `DOES_NOT_PARSE`
+
+The schema linter raises this violation if it attempts to read a malformed GraphQL schema. Check your schema for any syntax errors.
+
+<hr/>
+
+#### `QUERY_DOCUMENT_DECLARATION`
+
+A GraphQL schema should never include definitions of GraphQL _operations_ (such as queries and mutations).
+
+## All fields
+
+#### `FIELD_NAMES_SHOULD_BE_CAMEL_CASE`
+
+Field names should always use `camelCase`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+type User {
+  # highlight-start
+  FirstName: String! # PascalCase
+  # highlight-end
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+type User {
+  # highlight-start
+  firstName: String # camelCase
+  # highlight-end
+}
+```
+
+<hr/>
+
+#### `RESTY_FIELD_NAMES`
+
+Field names of the `Query` and `Mutation` types should never include HTTP verbs (`get`, `post`, and so on).
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+type Query {
+  getUsers: [User!]! # highlight-line
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+type Query {
+  users: [User!]! # highlight-line
+}
+```
+
+## All types
+
+These rules apply to _all_ types that appear in a GraphQL schema, including:
+
+- Objects
+- Interfaces
+- Inputs
+- Enums
+- Unions
+
+#### `TYPE_NAMES_SHOULD_BE_PASCAL_CASE`
+
+All type names should use `PascalCase`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+# highlight-start
+type streamingService { # camelCase
+# highlight-end
+  id: ID!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+# highlight-start
+type StreamingService { # PascalCase
+# highlight-end
+  id: ID!
+}
+```
+
+<hr/>
+
+#### `TYPE_PREFIX`
+
+Type names should never use the prefix `Type`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+interface TypeBook { # highlight-line
+  title: String!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+interface Book { # highlight-line
+  title: String!
+}
+```
+
+<hr/>
+
+#### `TYPE_SUFFIX`
+
+Type names should never use the suffix `Type`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+interface BookType { # highlight-line
+  title: String!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+interface Book { # highlight-line
+  title: String!
+}
+```
+
+## Objects
+
+#### `OBJECT_PREFIX`
+
+An object type's name should never use the prefix `Object`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+type ObjectBook { # highlight-line
+  title: String!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+type Book { # highlight-line
+  title: String!
+}
+```
+
+<hr/>
+
+#### `OBJECT_SUFFIX`
+
+An object type's name should never use the suffix `Object`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+type BookObject { # highlight-line
+  title: String!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+type Book { # highlight-line
+  title: String!
+}
+```
+
+## Interfaces
+
+#### `INTERFACE_PREFIX`
+
+An interface type's name should never use the prefix `Interface`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+interface InterfaceBook { # highlight-line
+  title: String
+  author: String
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+interface Book { # highlight-line
+  title: String
+  author: String
+}
+```
+
+<hr/>
+
+#### `INTERFACE_SUFFIX`
+
+An interface type's name should never use the suffix `Interface`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+interface BookInterface { # highlight-line
+  title: String
+  author: String
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+interface Book { # highlight-line
+  title: String
+  author: String
+}
+```
+
+## Inputs & arguments
+
+#### `INPUT_ARGUMENT_NAMES_SHOULD_BE_CAMEL_CASE`
+
+A GraphQL argument's name should always use `camelCase`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+type Mutation {
+  #highlight-start
+  createBlogPost(BlogPostContent: BlogPostContent!): Post # PascalCase
+  #highlight-end
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+type Mutation {
+  #highlight-start
+  createBlogPost(blogPostContent: BlogPostContent!): Post # camelCase
+  #highlight-end
+}
+```
+
+<hr/>
+
+#### `INPUT_TYPE_SUFFIX`
+
+An input type's name should always use the suffix `Input`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+input BlogPostDetails { #highlight-line
+  title: String!
+  content: String!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+input BlogPostDetailsInput { #highlight-line
+  title: String!
+  content: String!
+}
+```
+
+## Enums
+
+#### `ENUM_VALUES_SHOULD_BE_SCREAMING_SNAKE_CASE`
+
+Enum values should always use `SCREAMING_SNAKE_CASE`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+enum AmenityType {
+  # highlight-start
+  public_park # snake_case
+  # highlight-end
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+enum AmenityType {
+  # highlight-start
+  PUBLIC_PARK # SCREAMING_SNAKE_CASE
+  # highlight-end
+}
+```
+
+<hr/>
+
+#### `ENUM_PREFIX`
+
+An enum type's name should never use the prefix `Enum`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+enum EnumResidenceType { # highlight-line
+  HOUSE
+  APARTMENT
+  CONDO
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+enum ResidenceType { # highlight-line
+  HOUSE
+  APARTMENT
+  CONDO
+}
+```
+
+<hr/>
+
+#### `ENUM_SUFFIX`
+
+An enum type's name should never use the suffix `Enum`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+enum ResidenceTypeEnum { # highlight-line
+  HOUSE
+  APARTMENT
+  CONDO
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+enum ResidenceType { # highlight-line
+  HOUSE
+  APARTMENT
+  CONDO
+}
+```
+
+<hr/>
+
+#### `ENUM_USED_AS_INPUT_WITHOUT_SUFFIX`
+
+If an enum type is used as an input argument, its name _should_ use the suffix `Input`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+enum Role { # highlight-line
+  EDITOR
+  VIEWER
+}
+
+type Query {
+  users(role: Role): [User!]! # highlight-line
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+enum RoleInput { # highlight-line
+  EDITOR
+  VIEWER
+}
+
+type Query {
+  users(role: RoleInput): [User!]! # highlight-line
+}
+```
+
+<hr/>
+
+#### `ENUM_USED_AS_OUTPUT_DESPITE_SUFFIX`
+
+If an enum is used as the return type of a _non_-input field, its name _should not_ use the suffix `Input`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+enum RoleInput { # highlight-line
+  EDITOR
+  VIEWER
+}
+
+type Query {
+  userRole(userId: ID!): RoleInput # highlight-line
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+enum Role { # highlight-line
+  EDITOR
+  VIEWER
+}
+
+type Query {
+  userRole(userId: ID!): Role # highlight-line
+}
+```
+
+
+
+
+
+## Directives
+
+#### `DIRECTIVE_NAMES_SHOULD_BE_CAMEL_CASE`
+
+Directive names should always use `camelCase`.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+directive @SpecialField on FIELD_DEFINITION # PascalCase
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+directive @specialField on FIELD_DEFINITION # camelCase
+```
+
+<hr/>
+
+#### `CONTACT_DIRECTIVE_MISSING`
+
+A subgraph schema should always provide owner contact details via the `@contact` directive. [Learn more.](../graphs/federated-graphs#contact-info-for-subgraphs)
+
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+directive @contact(
+  "Contact title of the subgraph owner"
+  name: String!
+  "URL where the subgraph's owner can be reached"
+  url: String
+  "Other relevant notes can be included here; supports markdown links"
+  description: String
+) on SCHEMA
+
+extend schema @contact(
+  name: "Products Team",
+  url: "https://myteam.slack.com/archives/teams-chat-room-url",
+  description: "Send urgent issues to [#oncall](https://yourteam.slack.com/archives/oncall)."
+)
+```
+
+<hr/>
+
+#### `DEPRECATED_DIRECTIVE_MISSING_REASON`
+
+The `@deprecated` directive should always include a `reason` argument.
+
+<p style="margin-bottom: 0">❌</p>
+
+```graphql
+type Product {
+  title: String @deprecated #highlight-line
+  name: String!
+}
+```
+
+<p style="margin-bottom: 0">✅</p>
+
+```graphql
+type Product {
+  title: String @deprecated(reason: "Use name instead") #highlight-line
+  name: String!
+}
+```
+
+<hr/>
+
+#### `TAG_DIRECTIVE_USES_UNKNOWN_NAME`
+
+The `@tag` directive should always use a GraphOS-registered value for its `name` argument.
+
+
+
+**Rule name:**
+`UNKNOWN`
+
+**Description:**
+Unknown error returned by linter.
+
+**Example:**
+
+```graphql
+
+```
+
+**Rule name:**
+`UNRECOGNIZED`
+
+**Description:**
+Unrecognized error returned by linter.
+
+**Example:**
+
+```graphql
+
+```
