Remove UNKNOWN linter code

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -513,12 +513,6 @@ The `@tag` directive should always use a GraphOS-registered value for its `name`
 
 ## Other
 
-#### `UNKNOWN`
-
-The linter returned an unknown error.
-
-<hr/>
-
 #### `UNRECOGNIZED`
 
-The linter returned an unrecognized error.
+The linter returned an unrecognized linter violation code.
