--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -28,7 +28,7 @@ You can override a member's organization-wide role for individual graphs. For ex
 
 > A member's graph-specific role must have _more_ permissions than their organization-wide role.
 
-Members with the **Graph Admin** or **Org Admin** role can assign graph-specific roles from the Access tab of the graph's Settings page.
+Members with the **Graph Admin** or **Org Admin** role can assign graph-specific roles from the Permissions tab of the graph's Settings page.
 
 If a graph is made [hidden](../graphs/studio-features/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
 
