--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -300,13 +300,11 @@ After you make a variant public, you can click the variant's **PUBLIC** label at
 
 ### Protected variants (Enterprise only)
 
-If you have an Enterprise plan, you can designate particular variants of a graph as **protected variants**. Making a variant protected specifically affects the ability of users with the [**Contributor** role](../org/members/#organization-wide-member-roles) to make certain changes to the variant:
+If you have a [GraphOS Enterprise plan](../enterprise/), you can designate particular variants of a graph as **protected variants**. A protected variant limits the capabilities of users with the [**Contributor** role](../org/members/#organization-wide-member-roles) to make certain changes to the variant:
 
 - **Contributor**s _cannot_ push schema updates to a protected variant.
-- **Contributor**s _cannot_ manage Explorer-related settings for a protected variant, like setting its URL.
-- Graph API Keys with the **Contributor** permission _cannot_ report usage metrics to your graph.
-
-These are the only operations (other than creating new protected variants and creating new graphs) that can be performed by **Contributor**s and not by **Observer**s, so one way of thinking of protected variants are that they are variants where **Contributor**s are treated as **Observer**s.
+- **Contributor**s _cannot_ manage Explorer-related settings for a protected variant, such as setting the variant's endpoint URL.
+- Graph API Keys with the **Contributor** role _cannot_ report usage metrics for a protected variant.
 
 **Graph Admin**s and **Org Admin**s can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
 
@@ -314,9 +312,9 @@ These are the only operations (other than creating new protected variants and cr
 
 > For _external_ graph visibility, see [Public variants](#public-variants).
 
-By default, graphs are visible to all members of your organization. If you have an Enterprise plan, you can set a graph to instead be visible only to members you invite.
+By default, graphs are visible to all members of your organization. If you have a [GraphOS Enterprise plan](../enterprise/), you can set a graph to instead be visible only to members you invite.
 
-You can configure visibility and grant your organization's members explicit access to your graph from the Access tab of your graph's Settings page.
+You can configure visibility and grant your organization's members explicit access to your graph from the Permissions tab of your graph's Settings page.
 
 Note that **Org Admin**s can always see _all_ graphs in your organization.
 
