Add additional wording

--- a/src/content/technotes/TN0041-organisational-structure.mdx
+++ b/src/content/technotes/TN0041-organisational-structure.mdx
@@ -27,7 +27,7 @@ The second critical element of delivering a Supergraph at scale is comprehensive
 
 **Graph Infrastructure**
 
-The natural next area for consideration is the infrastructure supporting the graph. It is important that there is conscious thought and decision making regarding the graph's infrastructure, either via a "platform team" or at least a collective **governing how the graph infrastructure is configured** (i.e. router deployment, CI integration, developer experience etc..) that has a good view of the components of the Supergraph that are required. One crucial element is making sure that versions are well managed, for example ensuring that the correct version of the federation spec is being used and aligns with consistent versioning of the underlying frameworks being leveraged across Subgraphs, such as Apollo Server to enable and maintain specific features for subgraph teams.
+The natural next area for consideration is the infrastructure supporting the graph. It is important that there is conscious thought and decision making regarding the graph's infrastructure, either via a "platform team" or at least a collective that is **governing how the graph infrastructure is configured** (i.e. router deployment, CI integration, developer experience etc..) that has a good view of the components of the Supergraph that are required. One crucial element is making sure that versions are well managed, for example ensuring that the correct version of the federation spec is being used and aligns with consistent versioning of the underlying frameworks being leveraged across Subgraphs, such as Apollo Server to enable and maintain specific features for subgraph teams.
 
 **Evangelism**
 
