--- a/src/content/technotes/TN0041-organisational-structure.mdx
+++ b/src/content/technotes/TN0041-organisational-structure.mdx
@@ -1,5 +1,5 @@
 ---
-title: Organizational Structure to support a Supergraph
+title: How to best organise your engineering teams when delivering a Supergraph
 id: TN0041
 description: How to best organise your engineering teams when delivering a Supergraph
 tags: [federation, subgraphs, best-practices, organisation]
