Explain linter configuration in Studio

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -509,4 +509,4 @@ type Product {
 
 #### `TAG_DIRECTIVE_USES_UNKNOWN_NAME`
 
-The `@tag` directive should always use a registered value for its `name` argument.
+The `@tag` directive should always use an approved value for its `name` argument. You specify approved values in [GraphOS Studio](./schema-linter/#configuring-the-linter).
