--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -3,22 +3,77 @@ title: Schema linting
 description: With GraphOS
 ---
 
-GraphOS provides a **schema linter** that can enforce recommended formatting conventions and other GraphQL best practices in every change to your graph's schema.
+GraphOS provides **schema linting** to help you enforce formatting conventions and other GraphQL best practices with every proposed change to your graph's schema.
 
-Linting runs alongside your graph's other [schema checks](./schema-checks/), enabling you to integrate it seamlessly into your CI pipeline.
+<img
+  src="../img/linter-violations.jpg"
+  class="screenshot"
+  alt="Linter violations in GraphOS Studio"
+  width="500"
+/>
 
-## Studio setup
+- **If you set up [schema checks](./schema-checks/) for your graph,** linting runs as a separate check type alongside build and operation checks.
+- You can also perform [one-off linting with the Rover CLI](#one-off-linting-with-the-rover-cli).
 
-To configure lint checks in Studio, navigate to the Linter tab from the Checks page.
-Under Default Linter Configuration you will see the default linter settings for variants of this graph. Enabling the linter will run the linter on all graph variants. Note that the linter will only run on modified parts of your schema and not the entire schema.
+> **Note:** Currently, GraphOS linting only analyzes parts of your modified schema that differ from your _published_ schema. It does _not_ flag any _existing_ violations.
 
-You can choose to ignore rule violations on @deprecated definitions and @inacessible definitions.
+## Configuring the linter
 
-The next section of this page contains the list of linter rules with their name, description, and severity level.
+The GraphOS schema linter uses a [predefined collection of rules](./linter-rules/) to identify issues with proposed schema changes.
 
-The severity level defaults to Error but you can use the toggle to configure to a lower severity, warning.
+- You can configure how each variant of your graph treats violations of each linter rule.
+- You can also define **graph-wide linter defaults** for any variants you _don't_ configure individually.
 
-## Linting with the Rover CLI
+**Navigate to your linter's configuration:**
+
+1. In [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), go to your graph's **Checks** page.
+2. Click **Configuration** in the upper right to open the checks configuration page.
+3. From the checks configuration page, open the **Linter** section:
+
+    <img
+      src="../img/linter-configuration.jpg"
+      class="screenshot"
+      alt="Linter configuration page in GraphOS Studio"
+      width="700"
+    />
+
+4. **To configure graph-wide linter defaults** for _all_ of your variants, click the **This Graph** tab.
+
+    **To configure just the current variant,** remain on the **This Variant** tab.
+
+This page organizes linter options into the following categories:
+
+- **General Linter Configuration** provides high-level options, including disabling the linter entirely.
+- **Approved @tag names** enables you to specify approved values for the `name` argument of the `@tag` directive. This directive is used most commonly with [GraphOS contracts](./contracts/).
+  - If you don't use the `@tag` directive, you can ignore this category.
+  - Using a _non_-approved value for `name` raises the `TAG_DIRECTIVE_USES_UNKNOWN_NAME` violation.
+- **Linter Rules** enables you to [set the severity level](#setting-severity-levels) for violations of each rule.
+
+If you're configuring a single variant, each category displays a **Use Graph Settings** toggle in the upper right. If this toggle is enabled, the variant uses whatever graph-wide defaults are set for that category.
+
+### Setting severity levels
+
+The **Linter Rules** category of your linter configuration displays all predefined rules and the current **severity** level for each:
+
+<img
+    src="../img/linter-rules-list.jpg"
+    class="screenshot"
+    alt="Linter configuration page in GraphOS Studio"
+    width="500"
+  />
+
+Click a rule's severity to set it to any of the following:
+
+- **Error.** Any violation of this rule causes the associated linter check to fail.
+    - This in turn causes the _entire schema checks run_ to fail, which is useful for failing builds in CI.
+- **Warn.** Violations of this rule are flagged in checks reports, but they _don't_ cause the associated linter check to fail.
+- **Ignore.** Violations of this rule are ignored entirely.
+
+## Running the linter
+
+### Via schema checks
+
+### One-off linting
 
 ## Linter rules
 
