--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -24,7 +24,7 @@ GraphOS provides **schema linting** to help you enforce formatting conventions a
 The GraphOS schema linter uses a [predefined collection of rules](./linter-rules/) to identify issues with proposed schema changes.
 
 - You can configure how each variant of your graph treats violations of each linter rule.
-    - ⚠️ **Variant-level configuration is not available during the private preview period!**
+    - ⚠️ **Variant-level configuration is not yet available!**
 - You can also define **graph-wide linter defaults** for any variants you _don't_ configure individually.
     - Only these are available during the private preview period.
 
@@ -45,7 +45,7 @@ The GraphOS schema linter uses a [predefined collection of rules](./linter-rules
 
     **To configure just the current variant,** remain on the **This Variant** tab.
 
-      - ⚠️ **Variant-level configuration is not available during the private preview period!** All variants use graph-wide linter defaults.
+      - ⚠️ **Variant-level configuration is not yet available!** All variants use graph-wide linter defaults.
 
 This page organizes linter options into the following categories:
 
@@ -57,7 +57,7 @@ This page organizes linter options into the following categories:
 
 If you're viewing configuration for a single variant, each category displays a **Use Graph Settings** toggle in the upper right. If this toggle is enabled, the variant uses whatever graph-wide defaults are set for that category.
 
-> ⚠️ **During the private preview period,** the **Use Graph Settings** toggle is _always_ enabled for _all_ variants.
+> ⚠️ At this time, the **Use Graph Settings** toggle is _always_ enabled for _all_ variants.
 
 ### Setting severity levels
 
